nginx-app-example/example-namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "${APP_NAME}",
    "labels": {
      "name": "${APP_NAME}"
    }
  }
}
