nginx-app-example/example-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${APP_NAME}
spec:
  selector:
    app: ${APP_NAME}
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
